--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,301 @@
+html {
+  box-sizing: border-box;
+}
+
 body {
-  margin: 0;
+  margin:0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
 }
+
+#root {
+  height: 100%;
+  max-width: 100%;
+}
+
+.grid-container {
+  display: grid;
+  grid-template-areas:
+    'header'
+    'main'
+    'footer';
+  height: 100%;
+}
+
+header {
+  grid-area: header;
+}
+
+main {
+  grid-area: main;
+}
+
+footer {
+  grid-area: footer;
+}
+
+.mazuka-header {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  padding: 5px;
+}
+
+.carousal {
+  display:flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #87ceeb;
+}
+
+.description {
+  background-color: #fff !important;
+  color: #000080;
+  font-size: 18px;
+  align-self: flex-start;
+  max-width: 40%;
+  padding: 10px;
+  margin: 5px;
+  text-align: justify;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px 0 gray,
+    0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.carousal-content {
+  max-width: 60%;
+  margin: 5px;
+}
+
+img {
+  max-height: 250px;
+}
+
+.caro-div {
+  max-height: 499 !important;
+}
+
+.caro-div>img {
+  object-fit: contain !important;
+}
+
+.caro-div>p {
+  font-size: 20px;
+  font-weight: bold;
+  background-color: #00688b;
+  color: #fff;
+  padding: 5px;
+  border-radius: 10px;
+}
+
+@media screen and (max-width: 600px){
+  .mazuka-header{
+    display: flex;
+    flex-direction: column;
+  }
+}
+
+@media screen and (max-width:600px){
+  .carousal {
+    display: block;
+    width: 100%;
+    padding-bottom: 10px;
+    
+  } 
+  .carousal-content {
+    width: 90%;
+    max-width: 70%;
+  }
+  .description {
+    width: 90%;
+    max-width: 70%;
+    
+  }
+  .caro-div img {
+    display: block;
+    margin-left: auto;
+      margin-right: auto;
+  }
+  
+}
+
+
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+#root {
+  height: 100%;
+  width: 100%;
+}
+
+
+
+
+.ourservice-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  max-width: 95%;
+}
+
+.ourservices > h2 {
+  background-color: #282828;
+  color: #fff;
+  padding: 10px;
+  margin-top: 0;
+}
+.ourservice-container > div {
+  width: 270px;
+  max-width: 250px;
+  margin: 5px;
+  padding: 5px;
+}
+
+.ourservice-container > div > img {
+  width: 200px;
+  object-fit: contain;
+}
+
+.ourservice-container > div > h3 {
+  text-align: center;
+}
+
+
+
+.experience-container {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin-top: 20px;
+  width: 100%;
+}
+
+.experience {
+  max-width: 50%;
+}
+
+.clients {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+}
+
+.clients > div > img {
+  width: 60px;
+  margin: 10px;
+  align-items: center;
+}
+
+.policy {
+  max-width: 50%;
+  font-size: 12px;
+  font-weight: bold;
+  background-color: #00688b;
+  color: #fff;
+  padding: 5px;
+  border-radius: 10px;
+  margin: 3px;
+}
+.policy > p {
+  font-size: 14px;
+}
+
+
+
+.mazuka-footer {
+  width: 100%;
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-around;
+  background-color: #282828;
+  color: #fff;
+  padding: 10px;
+}
+
+.office {
+  display: flex;
+  justify-content: space-around;
+  width: 50%;
+}
+
+.office-header {
+  color: yellow;
+}
+
+.office > div > p {
+  max-width: 40%;
+  font-size: 13px;
+}
+
+.contact > p {
+  display: flex;
+  align-items: center;
+  font-size: 13px;
+}
+
+
+
+@media screen and (max-width:600px) {
+  .mazuka-header {
+    flex-direction: column;
+    max-width: 60%;
+  }
+  .carousal {
+   width: 100%;
+   max-width: 100%;
+   display: flex;
+   flex-direction: column-reverse;
+  }
+  .description {
+    width: 90%;
+    max-width: 80%;
+   margin-bottom: 10px;
+  }
+  .carousal-content {
+  
+    margin-left: 0px;
+
+  }
+
+  .ourservice-container {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    max-width: 90%;
+    margin-right: auto;
+    margin-left: auto;
+  }
+
+  .experience-container {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .mazuka-footer {
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+    max-width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .office {
+    width: 70%;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .contact {
+    max-width: 80%;
+    align-self:self-start;
+    margin-left: 80px;
+  }
+} 
