--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,11 @@ body {
   -moz-osx-font-smoothing: grayscale;
 
 }
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
+}
+
 
 #root {
   height: 100%;
@@ -107,34 +112,25 @@ img {
     
   } 
   .carousal-content {
-    width: 90%;
+    width: 70%;
     max-width: 70%;
+    display: block;
+    margin-right: auto;
+    margin-left: auto;
+    margin-top: 10px;
   }
   .description {
-    width: 90%;
-    max-width: 70%;
-    
+    width: 80% !important;
+    padding: 5px;
+    max-width: 70% !important;
   }
   .caro-div img {
     display: block;
     margin-left: auto;
-      margin-right: auto;
+    margin-right: auto;
   }
   
 }
-
-
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
-
-#root {
-  height: 100%;
-  width: 100%;
-}
-
 
 
 
@@ -146,7 +142,7 @@ code {
 }
 
 .ourservices > h2 {
-  background-color: #282828;
+  background-color: #00688b;
   color: #fff;
   padding: 10px;
   margin-top: 0;
@@ -207,6 +203,21 @@ code {
   font-size: 14px;
 }
 
+@media screen and (max-width:600px) {
+  .ourservice-container {
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: center;
+    align-items: center;
+  }
+  .ourservices > h2 {
+    text-align: left;
+    font-size: 25px;
+    padding-left: 30px;
+  }
+
+  
+}
 
 
 .mazuka-footer {
@@ -217,6 +228,7 @@ code {
   background-color: #282828;
   color: #fff;
   padding: 10px;
+  margin-top: 10px;
 }
 
 .office {
