--- a/src/index.css
+++ b/src/index.css
@@ -58,17 +58,19 @@ footer {
 }
 
 .description {
-  background-color: #fff !important;
-  color: #000080;
+  /*background-color: #fff !important;
+  color: #000080; */
+  color:#fff;
   font-size: 18px;
   align-self: flex-start;
   max-width: 40%;
   padding: 10px;
   margin: 5px;
   text-align: justify;
+  font-weight: bolder;
   border-radius: 10px;
-  box-shadow: 0 4px 8px 0 gray,
-    0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  /*box-shadow: 0 4px 8px 0 gray,
+    0 6px 20px 0 rgba(0, 0, 0, 0.19);*/
 }
 
 .carousal-content {
@@ -105,6 +107,7 @@ img {
   flex-wrap: wrap;
   justify-content: space-evenly;
   max-width: 95%;
+  background-color: black;
 }
 
 .ourservices > h2 {
@@ -112,6 +115,7 @@ img {
   color: #fff;
   padding: 10px;
   margin-top: 0;
+  margin-bottom: 0;
   text-align: center;
 }
 .ourservice-container > div {
@@ -240,7 +244,7 @@ img {
 
   .description {
     max-width: 48%;
-   margin-bottom: 10px;
+   margin-bottom: 1px;
   }
 
   .ourservice-container {
