--- a/src/index.css
+++ b/src/index.css
@@ -91,6 +91,7 @@ img {
 
 .caro-div>img {
   object-fit: contain !important;
+  border-radius:10px;
 }
 
 .caro-div>p {
@@ -142,6 +143,7 @@ img {
   align-items: center;
   margin-top: 20px;
   width: 100%;
+  max-width: 92%;
 }
 
 .experience {
@@ -230,7 +232,7 @@ img {
    width: 100%;
    max-width: 80%;
    display: flex;
-   flex-direction: column-reverse;
+  flex-direction: column;
    padding-bottom: 10px;
   }
 
@@ -252,8 +254,7 @@ img {
     flex-direction: column;
     flex-wrap: nowrap;
     max-width: 98%;
-    margin-right: auto;
-    margin-left: auto;
+    padding: 20px;
   }
 
     .ourservices>h2 {
@@ -265,6 +266,7 @@ img {
   .experience-container {
     display: flex;
     flex-direction: column;
+    padding-left: 20px;
   }
 
      .experience {
@@ -296,7 +298,8 @@ img {
    display: flex;
    flex-direction: column;
    align-self: baseline;
-    padding-bottom: 50px;
+  padding-bottom: 50px;
+  padding-left: 20px;
   }
 
   .office {
