--- a/src/index.css
+++ b/src/index.css
@@ -232,7 +232,7 @@ img {
    width: 100%;
    max-width: 80%;
    display: flex;
-  flex-direction: column;
+  flex-direction: column-reverse;
    padding-bottom: 10px;
   }
 
