--- a/src/pages/Catering.css
+++ b/src/pages/Catering.css
@@ -32,9 +32,34 @@
     margin-bottom: -10px;
     width: 100%;
     max-width: 100%;
+    padding-bottom: 50px;
 }
 
 .take-action > div {
+    margin: 10px;
+}
+
+
+.housekeeping-header-div {
+    padding: 20px;
+}
+.housekeeping-header {
+    text-align: center;
+    max-width: 100%;
+}
+
+
+.housekeeping {
+    display: flex;
+    justify-content: space-around;
+    background-color: #fff;
+    margin-bottom: -10px;
+    width: 100%;
+    max-width: 100%;
+    padding-bottom: 30px;
+}
+
+.housekeeping > div {
     margin: 10px;
 }
 
@@ -49,6 +74,17 @@
 .calculating > img {
     width: 50px;
     border-radius: 50%;
+}
+
+.call-to-action {
+    text-align: left;
+    padding: 20px;
+}
+
+.call-to-action > p {
+    font-size: 25px;
+    color: blue;
+    max-width: 95%;
 }
 
 
@@ -68,4 +104,9 @@
         display: flex;
         flex-direction: column;
     }
+
+         .housekeeping {
+             display: flex;
+             flex-direction: column;
+         }
 }
